<resources>
    <string name="app_name">SportsShop</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have">Already have an account?</string>
    <string name="don_t_have">Don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
        mollit anim id est laborum.</string>
    <string name="product_name">Product name</string>
    <string name="basic_rating">5.0</string>
    <string name="basic_price">5000</string>
    <string name="basic_quantity">1</string>
    <string name="rsd">rsd</string>
    <string name="price_rsd"> Price: rsd </string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="new_p">New</string>
    <string name="check_out">Check out</string>
    <string name="zero">0</string>
    <string name="subtotal">Subtotal</string>
    <string name="discount">Discount</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="card">Credit card</string>
    <string name="change">Change profile settings</string>
    <string name="old_password">Old password</string>
    <string name="create_address">Create Address</string>
    <string name="add_address">Add Address</string>
    <string name="address_lane">Address Lane</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="cur_date">Current Date: </string>
    <string name="cur_time">Current Time: </string>
    <string name="prod_name">Product Name: </string>
    <string name="prod_price">Product Price: </string>
    <string name="tot_price">Total Price: </string>
    <string name="tot_quantity">Total Quantity: </string>
    <string name="del_item">Delete Item</string>
    <string name="category">Category</string>
    <string name="new_products">New Products</string>
    <string name="pop_products">Popular Products</string>
    <string name="see_all">See All</string>
    <string name="best">We provide best products.</string>
    <string name="cat_name">Category Name</string>
    <string name="serbia">Serbia</string>

</resources>