<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_design"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/sign_up"
        android:textColor="@color/lightlavander"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/name"
        android:inputType="text"
        android:background="@drawable/edit_text_bg"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="15dp"
        android:layout_marginTop="25dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:drawableStart="@drawable/ic_baseline_person"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_account_circle"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/e_mail"
        android:padding="15dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_key"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/password"
        android:padding="15dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_key"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/confirm_password"
        android:padding="15dp"
        android:layout_marginTop="12dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signup"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:layout_marginTop="35dp"
        android:padding="15dp"
        app:layout_constraintWidth_percent=".4"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <TextView
        android:id="@+id/textViewAlreadyHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/already_have"
        android:layout_marginTop="5dp"
        android:layout_marginStart="75dp"
        app:layout_constraintEnd_toStartOf="@+id/sign_up_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/lightlavander"
        android:onClick="signin"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/textViewAlreadyHave"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>