<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProductDetailsActivity">

    <ImageView
        android:id="@+id/details_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/launcher_background"
        />

    <androidx.cardview.widget.CardView
        android:translationY="-50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_img">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/sulphur_point_bold"
                android:id="@+id/details_name"
                android:text="@string/product_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/details_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/basic_rating"
                android:fontFamily="@font/sulphur_point_bold"
                android:layout_toStartOf = "@id/rating"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>



            <RatingBar
                android:id="@+id/rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1" />
            </RelativeLayout>

            <TextView
                android:id="@+id/details_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lorem"
                android:fontFamily="@font/sulphur_point_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:text="@string/price"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/sulphur_point_bold"/>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal">

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/rsd"
                 android:textStyle="bold"
                 android:fontFamily="@font/sulphur_point_bold"
                 android:textColor="@color/black"/>

             <TextView
                 android:id="@+id/details_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/basic_price"
                 android:textStyle="bold"
                 android:fontFamily="@font/sulphur_point_bold"
                 android:textColor="@color/black"/>

        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp">

                <ImageView
                    android:id="@+id/add_item"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/plus"
                    android:layout_marginRight="7dp"/>

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basic_quantity"
                    android:textSize="30sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:id="@+id/remove_item"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/minus"
                    android:layout_marginLeft="7dp"/>

            </LinearLayout>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/add_to_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview"
        app:layout_constraintWidth_percent=".8"
        android:text="@string/add_to_cart"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:drawableLeft="@drawable/cart"
        android:drawableTint="@color/white"
        android:padding="14dp"/>

    <Button
        android:id="@+id/buy_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_200"
        android:drawableLeft="@drawable/shopping_cart"
        android:drawableTint="@color/white"
        android:padding="14dp"
        android:text="@string/buy_now"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_to_cart"
        app:layout_constraintWidth_percent=".8" />

</androidx.constraintlayout.widget.ConstraintLayout>