<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_design"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/sign_in"
        android:textColor="@color/lightlavander"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_account_circle"
        android:layout_marginTop="25dp"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignIn" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_key"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/password"
        android:padding="15dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />



    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="signin"
        android:padding="15dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:id="@+id/textViewDontHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/don_t_have"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="75dp"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="176dp"
        android:onClick="signup"
        android:text="@string/sign_up"
        android:textColor="@color/lightlavander"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewDontHave"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>